[package]
name = "naviance"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = { version = "0.1.40" }
anyhow = { version = "1.0.82" }
clap = { version = "4.5.4", features = ["derive", "unicode", "env"] }
dotenvy = { version = "0.15.7", features = ["clap"] }
tokio = { version = "1.37.0", features = [
  "rt-multi-thread",
  # "tokio-macros",
  "macros",
  "tracing",
] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
reqwest = { version = "0.12.4", features = [
  "brotli",
  "deflate",
  "gzip",
  "json",
  "rustls-tls",
  "zstd",
] }
serde = { version = "1.0.199", features = ["derive"] }
url = { version = "2.5.0", features = ["serde"] }
lazy_static = "1.4.0"
serde_json = "1.0.116"
tracing-log = "0.2.0"
futures = "0.3.30"
thiserror = "1.0.59"
http = "1.1.0"
chrono = { version = "0.4.38", features = ["serde"] }
uuid = { version = "1.8.0", features = ["serde"] }

[profile.release]
lto = "fat"
strip = false
# codegen-units = 1
